--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <header class="site-header">
    <nav class="site-nav">
-        <a class="menu-link" href="{{site.baseurl}}/">Home</a>
-        <a class="menu-link" href="{{site.baseurl}}/about/">About</a>
-        <a class="menu-link" href="{{site.baseurl}}/contact/">Contact</a>
+        <a class="menu-link" href="{{site.baseurl}}/">Início</a>
+        <a class="menu-link" href="{{site.baseurl}}/about/">Sobre</a>
+        <a class="menu-link" href="{{site.baseurl}}/contact/">Contato</a>
     </nav>
   <div class="wrapper jumbo">
-     <a href="{{site.baseurl}}/"><img class="avatar" src="//i1.wp.com/jujuba.ml/images/{{site.picture}}?resize=250;250" alt="avatar"></a>
+     <a href="{{site.baseurl}}/"><img class="avatar" src="//i1.wp.com/jujuba.ml/images/{{site.picture}}?resize=100;100" alt="avatar"></a>
    <h1 class="main-title">{{ site.title }}</h1>
     <h2 class="tagline">{{site.tagline}}</h2>
 </div>
