--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <a class="menu-link" href="{{site.baseurl}}/contact/">Contato</a>
     </nav>
   <div class="wrapper jumbo">
-     <a href="{{site.baseurl}}/"><img class="avatar" src="//i1.wp.com/jujuba.ml/images/{{site.picture}}?resize=100;100" alt="avatar"></a>
+     <a href="{{site.baseurl}}/"><img class="avatar" src="//i1.wp.com/jujuba.ml/images/{{site.picture}}?resize=100,100" alt="avatar"></a>
    <h1 class="main-title">{{ site.title }}</h1>
     <h2 class="tagline">{{site.tagline}}</h2>
 </div>
