--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
     <div class="wrapper footer" style="text-align:center">
         {% if site.credits %}
             <p><small>
-                Designed with
+                Criado com 
                 <span style="color:hotpink">❤︎
-                </span>by
-                <a href="https://blog.webjeda.com">webjeda</a>
+                </span>por
+                <a href="https://chat.whatsapp.com/KzXNKlKQjwZIPpBUBV1Jsj">Jujuba</a>
             {% endif %}
           </small></p>
     </div>
