--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-<div id="disqus_thread"></div>
+<!--<div id="disqus_thread"></div>
 <script defer>
 (function() {
     var d = document, s = d.createElement('script');
@@ -8,4 +8,4 @@
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                              
+-->                              
