--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
    <nav class="site-nav">
         <a class="menu-link" href="{{site.baseurl}}/">Início</a>
         <a class="menu-link" href="{{site.baseurl}}/about/">Sobre</a>
-        <a class="menu-link" href="https://chat.whatsapp.com/KzXNKlKQjwZIPpBUBV1Jsj">Whatsapp</a>
+        <a class="menu-link" href="{{site.baseurl}}/entrar/">Whatsapp</a>
     </nav>
   <div class="wrapper jumbo">
      <a href="{{site.baseurl}}/"><img class="avatar" src="https://mechamonivea.files.wordpress.com/2015/02/tumblr_mqnotrr9dl1rjqqvbo1_500.gif?resize=100,100" alt="avatar"></a>
