--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <a class="menu-link" href="{{site.baseurl}}/entrar/">Whatsapp</a>
     </nav>
   <div class="wrapper jumbo">
-     <a href="{{site.baseurl}}/"><img class="avatar" src="https://mechamonivea.files.wordpress.com/2015/02/tumblr_mqnotrr9dl1rjqqvbo1_500.gif?resize=100,100" alt="avatar"></a>
+     <a href="{{site.baseurl}}/"><img class="avatar" src="{{site.baseurl}}/images/{{site.picture}}" alt="avatar"></a>
    <h1 class="main-title">{{ site.title }}</h1>
     <h2 class="tagline">{{site.tagline}}</h2>
 </div>
