--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,4 +24,5 @@
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,700">
  
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link href='{{site.baseurl}}/favicon.png' rel='icon' type='image/x-icon'/>
 </head>
