--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
                 Criado com 
                 <span style="color:hotpink">❤︎
                 </span>por
-                <a href="https://chat.whatsapp.com/KzXNKlKQjwZIPpBUBV1Jsj">Jujuba</a>
+                <a href="{{site.baseurl}}/entrar/">Jujuba</a>
             {% endif %}
           </small></p>
     </div>
